<resources>
    <string name="app_name">IoT_Manager_Kot</string>
    <string name="home">Home</string>
    <string name="cameras">Cameras</string>
    <string name="addcamera">Add Camera</string>
    <string name="dummy">Dummy</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="contact">Contact</string>

    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_ID">User ID</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_edit_camera">Add / Edit Camera</string>
    <string name="camera_name">Camera Name</string>
    <string name="camera_location">Camera Location</string>
    <string name="ip_address">IP Address</string>
    <string name="port_number">Port Number</string>
    <string name="confirm_camera">Confirm Input</string>
    <string name="login">LOGIN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log Out</string>
    <string name="e_mail">E-Mail</string>
    <string name="add_feeding_time">Add Feeding Time</string>
    <string name="dog_feeder">Dog Feeder</string>
    <string name="user_cameras">User Cameras</string>
    <string name="camera_stream">Camera Stream</string>
    <string name="welcome_text">IoT Manager V1.0</string>
</resources>